# DryBox

./: .gitignore  IMPLEMENTATION_RECAP.md  Makefile  README.md  Spec_Adapter-interface_EN.md  Spec_Architecture_and_Implementation_EN.md  drybox_correct_gui.py  drybox_redesigned_gui.py  pyproject.toml  test_all_audio_features.sh  update.md
adapters/: audio_enhanced_player.py  audio_file_adapter.py  audio_recording_test.py  audio_test.py  audio_wav_player.py  nade_adapter.py  pingpong.py  test_traffic_adapter.py
docs/: AGENTS.md  GRAPHS.md  QUICKSTART.md  Spec_Adapter-interface_EN.md
drybox/adapters/: audioblock.py
drybox/core/: adapter_registry.py  capture.py  crypto_keys.py  metrics.py  paths.py  runner.py  runner_original.py  scenario.py
drybox/gui/: app.py
drybox/net/: bearers.py  sar_lite.py
drybox/radio/: channel_awgn.py  channel_fading.py  vocoder_models.py
drybox/scenarios/: audio_amr_vocoder.yaml  audio_isolated_loop.yaml  canonical_scenario.yaml  graph_stress_test.yaml  graph_test_scenario.yaml  test_scenario.yaml
drybox/schema/: scenario.schema.json
drybox/tests/: conftest.py  run_tests.sh  test_integration_audio.py
drybox/ui/: __init__.py  __main__.py  cli.py  main_window.py  scenario_widget.py
runs/gui_20250911_142806/: scenario.resolved.yaml
runs/gui_20250911_142950/: events.jsonl  metrics.csv
runs/gui_20250911_144039/: scenario.resolved.yaml
runs/test_audio/: events.jsonl  (+2 more)
scenarios/: audio_amr_vocoder.yaml  audio_awgn_snr10.yaml  audio_file_test.yaml  audio_isolated_loop.yaml  audio_plc_test.yaml  audio_rayleigh_fading.yaml  bytelink_volte_smoke.yaml
schema/: scenario.schema.json
(+42 files in other folders)
