[project]
name = "drybox"
version = "0.1.0"
description = "Logical phone call emulator, designed to design the Nade protocol"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=45.0.7",
    "jsonschema>=4.25.1",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=6.2.1",
]
gui = [
    "PyQt6>=6.0.0",
]
