[project]
name = "drybox"
version = "0.1.0"
description = "Logical phone call emulator, designed to design the Nade protocol"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=45.0.7",
    "jsonschema>=4.25.1",
    "numpy>=2.3.3",
    "pyside6>=6.9.0",
    "pyyaml>=6.0.2",
    "dissononce>=0.34.3",
    "cffi>=1.17.0",
    "pyqtgraph>=0.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=6.2.1",
]
gui = [
    "PySide6>=6.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
py-modules = []  # prevent top-level .py files from being packaged as modules

[tool.setuptools.packages.find]
include = ["drybox*", "adapters*"]   # include example adapters if you keep them top-level
exclude = ["runs*", "docs*", "tests*"]

[tool.setuptools.package-data]
drybox = [
  "scenarios/*.yaml",
  "schema/*.json",
  "WAV/*"
]

[project.scripts]          # optional sugar so you can do `uv run drybox` / `uv run drybox-qt`
drybox = "drybox.ui.__main__:main"
drybox-run = "drybox.core.runner:main"
